# unito-scpd

./: .gitignore  README.md
adaboost-mpi/:  risultati_adaboost-mpi-v2.txt   risultati_adaboost-mpi.txt  CMakeLists.txt
adaboost-mpi/res/: risultati_adaboost-mpi_s2.txt  risultati_adaboost-mpi_s4.txt  risultati_adaboost-mpi_s5.txt  risultati_adaboost-mpi_s7.txt  risultati_adaboost-mpi_s8.txt  risultati_adaboost-mpi_s9.txt  risultati_adaboost-mpi_strong_10_prest.txt  risultati_adaboost-mpi_strong_10_prova_new_param.txt  risultati_adaboost-mpi_strong_13_prest.txt  risultati_adaboost-mpi_strong_1_new_param.txt  risultati_adaboost-mpi_strong_1_new_param_20_e2.txt  risultati_adaboost-mpi_strong_1_new_param_20_e3.txt  risultati_adaboost-mpi_strong_1_new_param_20_e3_skipping.txt  risultati_adaboost-mpi_strong_1_new_param_20_e4.txt  risultati_adaboost-mpi_strong_1_new_param_30_e3.txt  risultati_adaboost-mpi_strong_1_new_param_30_e5.txt  risultati_adaboost-mpi_strong_2.txt  risultati_adaboost-mpi_strong_3.txt  risultati_adaboost-mpi_strong_3_prest.txt  risultati_adaboost-mpi_strong_4_prest.txt  risultati_adaboost-mpi_strong_5.txt  risultati_adaboost-mpi_strong_6_prest.txt  risultati_adaboost-mpi_strong_7.txt  risultati_adaboost-mpi_strong_7_prest.txt  risultati_adaboost-mpi_strong_8_prest.txt  risultati_adaboost-mpi_strong_9_prest.txt  risultati_adaboost-mpi_weak_2.txt  risultati_adaboost-mpi_weak_3.txt  risultati_adaboost-mpi_weak_4.txt  risultati_adaboost-mpi_weak_5.txt  risultati_adaboost-mpi_weak_6.txt  risultati_adaboost-mpi_weak_7.txt  risultati_adaboost-mpi_weak_8.txt  risultati_adaboost-mpi_weak_9.txt
adaboost-mpi/src/: .submit.sh.swp  166976.err  167063.err  167064.err  167065.err  167068.err  167069.err  167070.err  167113.err  167125.err  167126.err  167130.err  167131.err  167133.err  167134.err  167135.err  167137.err  167138.err  167139.err  167140.err  167141.err  167143.err  167144.err  167145.err  167146.err  167149.err  167150.err  167151.err  167152.err  167153.err  167155.err  168140.err  168141.err  168142.err  168143.err  168148.err  168149.err  168150.err  168151.err  168152.err  (+20 more)
adaboost-mpi/src/communication_lib/: CMakeLists.txt  libcomm.cpp  libcomm.hpp
adaboost-mpi/src/data_lib/: CMakeLists.txt  datalib.cpp  datalib.hpp
adaboost-s/: CMakeLists.txt
adaboost-s/src/: main.cpp
adaboost_mpi_v2/:  risultati_adaboost-mpi-v2.txt  166709.err  166710.err  166711.err  166712.err  166713.err  166714.err  CMakeLists.txt  submit.sh
adaboost_mpi_v2/res/: risultati_adaboost-mpi-v2_s1.txt  risultati_adaboost-mpi-v2_s2.txt  risultati_adaboost-mpi-v2_s3.txt  risultati_adaboost-mpi-v2_s5.txt  risultati_adaboost-mpi-v2_s6.txt  risultati_adaboost-mpi-v2_s7.txt  risultati_adaboost-mpi-v2_s8.txt  risultati_adaboost-mpi-v2_s9.txt  risultati_adaboost-mpi-v2_w1.txt  risultati_adaboost-mpi-v2_w2.txt  risultati_adaboost-mpi-v2_w3.txt  risultati_adaboost-mpi-v2_w4.txt  risultati_adaboost-mpi-v2_w5.txt  risultati_adaboost-mpi-v2_w6.txt  risultati_adaboost-mpi-v2_w7.txt  risultati_adaboost-mpi-v2_w8.txt
adaboost_mpi_v2/src/: 168653.err  168654.err  168655.err  168656.err  168657.err  168658.err  168659.err  168660.err  168683.err  168684.err  168685.err  168686.err  168687.err  168705.err  168706.err  168707.err  168708.err  168709.err  168710.err  168711.err  171025.err  171026.err  171028.err  171029.err  171030.err  171031.err  171032.err  171033.err  171034.err  171035.err  171037.err  171042.err  main.cpp  submit.sh  xclude=broadwell-002
adaboost_mpi_v2/src/communication_lib/: libcomm.cpp  libcomm.hpp
adaboost_mpi_v2/src/data_lib/: datalib.cpp  datalib.hpp
datasets_filtered/: cov_test_labels_filtrate.csv  cov_train_labels_filtrate.csv
